Bugfix: properly fix wrong color on active menu while using new grid theme
Previous work by patrick was incorrect and included other undefined changes.
I also noticed a large number of syntax standards violations.

Non-compliant code will be punted.

ticket: www-1547

--- a/sites/all/themes/mcneese_www/css/all/www-all-page-731.css
+++ b/sites/all/themes/mcneese_www/css/all/www-all-page-731.css
@@ -658,7 +658,6 @@
 
 .mcneese.node-theme-page-731 #mcneese-page-side .workbench_menu .menu_item > .menu_item-children .menu_item .menu_item.expanded a,
 .mcneese.node-theme-page-731 #mcneese-page-side .workbench_menu .menu_item > .menu_item-children .menu_item .menu_item.collapsed a {
-    color: #00477f;
     font-weight: bold;
 }
 
